--- a/index.html
+++ b/index.html
@@ -9,115 +9,97 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800;900&display=swap" rel="stylesheet">
 
   <style>
-    :root {
-      --bg: #0a1325;
-      --card: #111f3b;
-      --muted: #9fb3c8;
-      --border: rgba(255,255,255,.1);
-      --divider: rgba(255,255,255,.08);
-      --ok: #33d17a;
-      --hi: #ff5577;
-      --lo: #4ea3ff;
-      --avg: #ffbf47;
-    }
-    * { box-sizing: border-box; }
-    body {
-      margin: 0;
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: var(--bg);
-      color: #e6eef7;
-      font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
-    }
-    .card {
-      width: min(92vw, 520px);
-      background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: 16px;
-      box-shadow: 0 8px 25px rgba(0,0,0,.6);
-      padding: 20px;
-      text-align: center;
-    }
-    .title { font-weight: 800; font-size: 20px; margin-bottom: 4px; }
-    .subtitle { font-size: 14px; font-weight: 600; margin-bottom: 2px; }
-    .location-note { font-size: 12px; color: var(--muted); margin-bottom: 14px; }
-    .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; margin-bottom: 16px; }
-    .tile {
-      background: rgba(255,255,255,0.03);
-      border: 1px solid var(--divider);
-      border-radius: 12px;
-      padding: 12px;
-      text-align: center;
-    }
-    .tile .label {
-      font-size: 12px;
-      font-weight: 700;
-      color: var(--muted);
-      margin-bottom: 4px;
-    }
-    .tile .val {
-      font-size: 28px;
-      font-weight: 900;
-      margin: 2px 0;
-    }
-    .tile .time {
-      font-size: 11px;
-      color: var(--muted);
-    }
-    .current .val { color: var(--ok); }
-    .high .val { color: var(--hi); }
-    .low .val { color: var(--lo); }
-    .avg .val { color: var(--avg); }
+    :root{
+      --page: #f7f9fc;
+      --card: #ffffff;
+      --border: #e6ecf5;
+      --shadow: rgba(15, 23, 42, 0.06);
+      --text: #0f172a;
+      --muted: #5b6b80;
 
-    /* Trends */
-    .section h3 {
-      margin: 4px 0 10px 0;
-      font-size: 14px;
-      font-weight: 700;
-      text-align: center;
-      color: var(--muted);
+      /* Accent colors */
+      --ok: #33d17a;   /* current */
+      --hi: #ff5577;   /* high */
+      --lo: #4ea3ff;   /* low */
+      --avg: #ffbf47;  /* avg/trend */
     }
-    .trend-grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 12px;
+
+    *{ box-sizing:border-box }
+    body{
+      margin:0;
+      min-height:100vh;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      background:var(--page);
+      color:var(--text);
+      font-family:'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
     }
-    .trend-tile {
-      background: rgba(255,255,255,0.03);
-      border: 1px solid var(--divider);
-      border-radius: 12px;
-      padding: 12px;
-      text-align: center;
+
+    .card{
+      width:min(92vw, 560px);
+      background:var(--card);
+      border:1px solid var(--border);
+      box-shadow:0 8px 24px var(--shadow);
+      border-radius:14px;
+      padding:24px;
+      text-align:center;
     }
-    .trend-tile .t-label {
-      font-size: 12px;
-      font-weight: 700;
-      color: var(--muted);
-      margin-bottom: 6px;
+
+    .title{ font-weight:800; font-size:26px; margin:0 0 2px }
+    .subtitle{ font-size:16px; font-weight:600; opacity:.9; margin:0 0 2px }
+    .location-note{ font-size:13px; color:var(--muted); margin:0 0 16px }
+
+    .grid{ display:grid; grid-template-columns:1fr 1fr; gap:12px; margin-bottom:14px }
+    .tile{
+      background:#fff;
+      border:1px solid var(--border);
+      border-radius:12px;
+      padding:12px 12px 10px;
+      text-align:center;
     }
-    .trend-tile .t-val {
-      font-size: 24px;
-      font-weight: 900;
-      line-height: 1.1;
+    .label{ font-size:12px; font-weight:700; color:var(--muted); margin-bottom:4px }
+    .val{ font-size:28px; font-weight:900; margin:2px 0 0 }
+    .time{ font-size:12px; color:var(--muted); margin-top:4px }
+
+    .current .val{ color:var(--ok) }
+    .high .val{ color:var(--hi) }
+    .low .val{ color:var(--lo) }
+    .avg .val{ color:var(--avg) }
+
+    .section{ margin-top:6px }
+    .section h3{
+      margin:6px 0 10px;
+      font-size:15px;
+      font-weight:800;
+      color:var(--text);
     }
-    .t-up { color: var(--avg); }
-    .t-down { color: var(--lo); }
+    .trend-grid{ display:grid; grid-template-columns:1fr 1fr; gap:12px }
+    .trend-tile{
+      background:#fff;
+      border:1px solid var(--border);
+      border-radius:12px;
+      padding:12px;
+    }
+    .t-label{ font-size:12px; font-weight:700; color:var(--muted); margin-bottom:6px }
+    .t-val{ font-size:24px; font-weight:900; line-height:1.1 }
+    .t-up{ color:var(--avg) }
+    .t-down{ color:var(--lo) }
   </style>
 </head>
 <body>
   <div class="card">
-    <div class="title">6&quot; Soil Temperature</div>
+    <h1 class="title">6&quot; Soil Temperature</h1>
     <div class="subtitle">Holdrege, NE</div>
     <div class="location-note">Dryland corn stubble</div>
+
     <div id="content">Loading…</div>
   </div>
 
   <script>
     (async () => {
-      const loggerName = "25x4gcityw";        // your logger name
-      const tz = "America/Chicago";           // output TZ
+      const loggerName = "25x4gcityw";
+      const tz = "America/Chicago";
       const bust = Date.now();
       const url = `/.netlify/functions/soil-temp?name=${encodeURIComponent(loggerName)}&tz=${encodeURIComponent(tz)}&days=30&_=${bust}`;
 
@@ -125,11 +107,11 @@
       const deltaToF = dc => Math.round((dc * 9/5) * 10) / 10;
       const signed = n => (n > 0 ? `+${n}` : `${n}`);
 
-      try {
+      try{
         const res = await fetch(url);
         const data = await res.json();
 
-        if (data.error || data.note) {
+        if (data.error || data.note){
           document.getElementById("content").textContent = data.error || data.note;
           return;
         }
