--- a/index.html
+++ b/index.html
@@ -17,11 +17,18 @@
       --text: #0f172a;
       --muted: #5b6b80;
 
-      /* Accent colors */
+      /* Accent colors (temps) */
       --ok: #33d17a;   /* current */
       --hi: #ff5577;   /* high */
       --lo: #4ea3ff;   /* low */
       --avg: #ffbf47;  /* avg/trend */
+
+      /* Moisture gradient (vibrant) */
+      --dryA: rgba(255,191,71,0.72);
+      --okA:  rgba(51,209,122,0.72);
+      --wetA: rgba(78,163,255,0.72);
+      --track:#eef2f7;
+      --marker:#0f172a;
     }
 
     *{ box-sizing:border-box }
@@ -85,6 +92,39 @@
     .t-val{ font-size:24px; font-weight:900; line-height:1.1 }
     .t-up{ color:var(--avg) }
     .t-down{ color:var(--lo) }
+
+    /* ---------------- Moisture styles ---------------- */
+    .m-section h3{ margin-top:14px }
+    .m-tile{
+      border:1px solid var(--border);
+      border-radius:12px;
+      padding:14px;
+      background:#fff;
+      text-align:center;
+      margin-bottom:12px;
+    }
+    .m-row{
+      display:flex; align-items:center; justify-content:center; gap:12px;
+      margin-bottom:10px;
+    }
+    .m-label{ font-size:13px; font-weight:800; color:var(--muted) }
+
+    /* full-width gradient bar */
+    .m-bar{
+      position:relative; height:18px; border-radius:999px;
+      background: linear-gradient(90deg, var(--dryA) 0%, var(--okA) 50%, var(--wetA) 100%), var(--track);
+      overflow:hidden;
+    }
+    /* markers */
+    .m-marker{ position:absolute; top:50%; transform:translate(-50%,-50%); border-radius:50%; }
+    .m-marker.current{ width:14px; height:14px; background:#0f172a; box-shadow:0 0 0 2px #fff, 0 2px 8px rgba(15,23,42,.2); }
+    .m-marker.avg{ width:12px; height:12px; background:#fff; box-shadow:0 0 0 2px #0f172a, 0 2px 6px rgba(15,23,42,.12); }
+
+    .m-scale{ display:flex; justify-content:center; gap:40px; font-size:12px; color:var(--muted); margin-top:8px }
+    .m-legend{ margin-top:8px; display:flex; justify-content:center; gap:16px; font-size:12px; color:var(--muted); }
+    .m-legend .dot{ display:inline-block; width:10px; height:10px; border-radius:50%; margin-right:6px; vertical-align:-1px }
+    .m-legend .cur{ background:#0f172a; box-shadow:0 0 0 2px #fff }
+    .m-legend .avg{ background:#fff; box-shadow:0 0 0 2px #0f172a }
   </style>
 </head>
 <body>
@@ -101,15 +141,21 @@
       const loggerName = "25x4gcityw";
       const tz = "America/Chicago";
       const bust = Date.now();
-      const url = `/.netlify/functions/soil-temp?name=${encodeURIComponent(loggerName)}&tz=${encodeURIComponent(tz)}&days=30&_=${bust}`;
+
+      // --- TEMP fetch (existing) ---
+      const urlTemp = `/.netlify/functions/soil-temp?name=${encodeURIComponent(loggerName)}&tz=${encodeURIComponent(tz)}&days=30&_=${bust}`;
+
+      // --- MOISTURE fetch (new) for 6" and 22" ---
+      const urlMoist = `/.netlify/functions/soil-moisture?name=${encodeURIComponent(loggerName)}&depths=6,22&days=30&_=${bust}`;
 
       const toF = c => Math.round((c * 9/5 + 32) * 10) / 10;
       const deltaToF = dc => Math.round((dc * 9/5) * 10) / 10;
-      const signed = n => (n > 0 ? `+${n}` : `${n}`);
+      const signed = n => (n > 0 ? \`+\${n}\` : \`\${n}\`);
 
-      try{
-        const res = await fetch(url);
-        const data = await res.json();
+      try {
+        const [resT, resM] = await Promise.all([fetch(urlTemp), fetch(urlMoist)]);
+        const data = await resT.json();
+        const moist = await resM.json();
 
         if (data.error || data.note){
           document.getElementById("content").textContent = data.error || data.note;
@@ -133,7 +179,8 @@
             </div>`;
         };
 
-        document.getElementById("content").innerHTML = `
+        // Build temperature UI
+        const tempHtml = `
           <div class="grid">
             <div class="tile current">
               <div class="label">Current</div>
@@ -167,7 +214,52 @@
               ${trendTile("30-day", data.trend30d?.delta)}
             </div>
           </div>
+
+          <div class="section m-section">
+            <h3>Soil moisture</h3>
+            <div id="moisture">Loading…</div>
+          </div>
         `;
+
+        const contentEl = document.getElementById("content");
+        contentEl.innerHTML = tempHtml;
+
+        // Build moisture UI (only visuals; Dry/Wet scale; black/white markers)
+        function renderMoisture(depths){
+          const cont = document.getElementById("moisture");
+          if (!depths || !depths.length){
+            cont.textContent = moist.error || "No moisture data.";
+            return;
+          }
+          cont.innerHTML = depths.map(d => {
+            const v = Number.isFinite(d.vwc) ? Math.max(0, Math.min(100, d.vwc)) : null;
+            const a = Number.isFinite(d.avg30) ? Math.max(0, Math.min(100, d.avg30)) : null;
+
+            return `
+              <div class="m-tile">
+                <div class="m-row">
+                  <div class="m-label">${d.depthIn}&Prime; soil moisture</div>
+                </div>
+                <div class="m-bar">
+                  ${a!==null ? `<div class="m-marker avg" style="left:${a}%"></div>` : ""}
+                  ${v!==null ? `<div class="m-marker current" style="left:${v}%"></div>` : ""}
+                </div>
+                <div class="m-scale"><span>Dry</span><span>Wet</span></div>
+                <div class="m-legend">
+                  <span><span class="dot cur"></span>Current</span>
+                  <span><span class="dot avg"></span>30-day avg</span>
+                </div>
+              </div>
+            `;
+          }).join("");
+        }
+
+        if (moist.error) {
+          document.getElementById("moisture").textContent = moist.error;
+        } else {
+          renderMoisture(moist.depths);
+        }
+
       } catch (e) {
         document.getElementById("content").textContent = "Fetch error: " + e.message;
       }
