--- a/index.html
+++ b/index.html
@@ -1,269 +1,185 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>6&quot; Soil Temperature – Holdrege, NE</title>
+// netlify/functions/soil-moisture.js
+// Returns live soil moisture (VWC %) for given depths from IrriMAX Live.
+//
+// Query:
+//   ?name=LOGGER_NAME        (required)
+//   &depths=6,22             (optional CSV in inches; default "6,22")
+//   &days=30                 (optional; default 30; lookback window)
+//   &tz=America/Chicago      (optional; for timestamp parsing)
+//
+// Env: IRRIMAX_API_KEY
 
-  <!-- Inter font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800;900&display=swap" rel="stylesheet">
+exports.handler = async (event) => {
+  try {
+    const p = event.queryStringParameters || {};
+    const name = p.name;
+    const tz = p.tz || "America/Chicago";
+    const days = Math.max(1, parseInt(p.days || "30", 10));
+    const depthsReq = (p.depths || "6,22")
+      .split(",")
+      .map(s => parseFloat(s.trim()))
+      .filter(n => Number.isFinite(n) && n > 0);
 
-  <style>
-    :root{
-      --page: #f7f9fc;
-      --card: #ffffff;
-      --border: #e6ecf5;
-      --shadow: rgba(15, 23, 42, 0.06);
-      --text: #0f172a;
-      --muted: #5b6b80;
+    const key = process.env.IRRIMAX_API_KEY;
+    if (!name) return json(400, { error: "Missing ?name=LOGGER_NAME" });
+    if (!key)  return json(500, { error: "Missing IRRIMAX_API_KEY env var" });
 
-      /* Accent colors (temps) */
-      --ok: #33d17a;   /* current */
-      --hi: #ff5577;   /* high */
-      --lo: #4ea3ff;   /* low */
-      --avg: #ffbf47;  /* avg/trend */
+    // Pull last N days
+    const since = new Date(Date.now() - days * 24 * 3600 * 1000);
+    const from = ymdHMS_utc(since);
 
-      /* Moisture gradient (vibrant) */
-      --dryA: rgba(255,191,71,0.72);
-      --okA:  rgba(51,209,122,0.72);
-      --wetA: rgba(78,163,255,0.72);
-      --track:#eef2f7;
-      --marker:#0f172a;
+    const url = `https://www.irrimaxlive.com/api/?cmd=getreadings&key=${encodeURIComponent(key)}&name=${encodeURIComponent(name)}&from=${from}`;
+    const resp = await fetch(url);
+    if (!resp.ok) {
+      const body = await resp.text().catch(()=> "");
+      return json(502, { error: "IrriMAX fetch failed", status: resp.status, body });
+    }
+    const csvText = await resp.text();
+    const rows = parseCSV(csvText);
+    if (!rows.length) return json(200, { note: "No data (empty CSV)" });
+
+    const header = rows[0].map(x => String(x||"").trim());
+
+    // Find VWC columns like V1(5), V2(15) cm, or headers containing vwc/theta + (cm)
+    const vCols = []; // { colIdx, depthInches }
+    header.forEach((h, i) => {
+      let m = h.match(/^V\d+\((\d+(?:\.\d+)?)\)\s*$/i); // V1(5)
+      if (m) { vCols.push({ colIdx: i, depthInches: parseFloat(m[1]) / 2.54 }); return; }
+      m = h.match(/(?:vwc|theta|θ|water\s*content)[^0-9]*([0-9]+(?:\.\d+)?)\s*cm/i);
+      if (m) vCols.push({ colIdx: i, depthInches: parseFloat(m[1]) / 2.54 });
+    });
+    if (!vCols.length) {
+      return json(500, { error: "No moisture (VWC) columns detected", header });
     }
 
-    *{ box-sizing:border-box }
-    body{
-      margin:0;
-      min-height:100vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      background:var(--page);
-      color:var(--text);
-      font-family:'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
-    }
+    // Parse rows → readings {ts, vals}
+    const dateIdx = 0; // usually first column is "Date Time"
+    const readings = []; // [{ ts: Date, vals: {colIdx: vwc} }]
+    for (let r = 1; r < rows.length; r++) {
+      const row = rows[r];
+      const rawTs = row[dateIdx];
+      if (!rawTs) continue;
+      const ts = parseLocalWallTime(rawTs, tz); // treat bare timestamps as local tz
+      if (isNaN(ts)) continue;
 
-    .card{
-      width:min(92vw, 560px);
-      background:var(--card);
-      border:1px solid var(--border);
-      box-shadow:0 8px 24px var(--shadow);
-      border-radius:14px;
-      padding:24px;
-      text-align:center;
-    }
-
-    .title{ font-weight:800; font-size:26px; margin:0 0 2px }
-    .subtitle{ font-size:16px; font-weight:600; opacity:.9; margin:0 0 2px }
-    .location-note{ font-size:13px; color:var(--muted); margin:0 0 16px }
-
-    .grid{ display:grid; grid-template-columns:1fr 1fr; gap:12px; margin-bottom:14px }
-    .tile{
-      background:#fff;
-      border:1px solid var(--border);
-      border-radius:12px;
-      padding:12px 12px 10px;
-      text-align:center;
-    }
-    .label{ font-size:12px; font-weight:700; color:var(--muted); margin-bottom:4px }
-    .val{ font-size:28px; font-weight:900; margin:2px 0 0 }
-    .time{ font-size:12px; color:var(--muted); margin-top:4px }
-
-    .current .val{ color:var(--ok) }
-    .high .val{ color:var(--hi) }
-    .low .val{ color:var(--lo) }
-    .avg .val{ color:var(--avg) }
-
-    .section{ margin-top:6px }
-    .section h3{
-      margin:6px 0 10px;
-      font-size:15px;
-      font-weight:800;
-      color:var(--text);
-    }
-    .trend-grid{ display:grid; grid-template-columns:1fr 1fr; gap:12px }
-    .trend-tile{
-      background:#fff;
-      border:1px solid var(--border);
-      border-radius:12px;
-      padding:12px;
-    }
-    .t-label{ font-size:12px; font-weight:700; color:var(--muted); margin-bottom:6px }
-    .t-val{ font-size:24px; font-weight:900; line-height:1.1 }
-    .t-up{ color:var(--avg) }
-    .t-down{ color:var(--lo) }
-
-    /* ---------------- Moisture styles ---------------- */
-    .m-section h3{ margin-top:14px }
-    .m-tile{
-      border:1px solid var(--border);
-      border-radius:12px;
-      padding:14px;
-      background:#fff;
-      text-align:center;
-      margin-bottom:12px;
-    }
-    .m-row{
-      display:flex; align-items:center; justify-content:center; gap:12px;
-      margin-bottom:10px;
-    }
-    .m-label{ font-size:13px; font-weight:800; color:var(--muted) }
-
-    /* full-width gradient bar */
-    .m-bar{
-      position:relative; height:18px; border-radius:999px;
-      background: linear-gradient(90deg, var(--dryA) 0%, var(--okA) 50%, var(--wetA) 100%), var(--track);
-      overflow:hidden;
-    }
-    /* markers */
-    .m-marker{ position:absolute; top:50%; transform:translate(-50%,-50%); border-radius:50%; }
-    .m-marker.current{ width:14px; height:14px; background:#0f172a; box-shadow:0 0 0 2px #fff, 0 2px 8px rgba(15,23,42,.2); }
-    .m-marker.avg{ width:12px; height:12px; background:#fff; box-shadow:0 0 0 2px #0f172a, 0 2px 6px rgba(15,23,42,.12); }
-
-    .m-scale{ display:flex; justify-content:center; gap:40px; font-size:12px; color:var(--muted); margin-top:8px }
-    .m-legend{ margin-top:8px; display:flex; justify-content:center; gap:16px; font-size:12px; color:var(--muted); }
-    .m-legend .dot{ display:inline-block; width:10px; height:10px; border-radius:50%; margin-right:6px; vertical-align:-1px }
-    .m-legend .cur{ background:#0f172a; box-shadow:0 0 0 2px #fff }
-    .m-legend .avg{ background:#fff; box-shadow:0 0 0 2px #0f172a }
-  </style>
-</head>
-<body>
-  <div class="card">
-    <h1 class="title">6&quot; Soil Temperature</h1>
-    <div class="subtitle">Holdrege, NE</div>
-    <div class="location-note">Dryland corn stubble</div>
-
-    <div id="content">Loading…</div>
-  </div>
-
-  <script>
-    (async () => {
-      const loggerName = "25x4gcityw";
-      const tz = "America/Chicago";
-      const bust = Date.now();
-
-      // --- TEMP fetch (existing) ---
-      const urlTemp = `/.netlify/functions/soil-temp?name=${encodeURIComponent(loggerName)}&tz=${encodeURIComponent(tz)}&days=30&_=${bust}`;
-
-      // --- MOISTURE fetch (new) for 6" and 22" ---
-      const urlMoist = `/.netlify/functions/soil-moisture?name=${encodeURIComponent(loggerName)}&depths=6,22&days=30&_=${bust}`;
-
-      const toF = c => Math.round((c * 9/5 + 32) * 10) / 10;
-      const deltaToF = dc => Math.round((dc * 9/5) * 10) / 10;
-      const signed = n => (n > 0 ? \`+\${n}\` : \`\${n}\`);
-
-      try {
-        const [resT, resM] = await Promise.all([fetch(urlTemp), fetch(urlMoist)]);
-        const data = await resT.json();
-        const moist = await resM.json();
-
-        if (data.error || data.note){
-          document.getElementById("content").textContent = data.error || data.note;
-          return;
-        }
-
-        const trendTile = (label, deltaC) => {
-          if (deltaC === null || deltaC === undefined) {
-            return `
-              <div class="trend-tile">
-                <div class="t-label">${label}</div>
-                <div class="t-val">—</div>
-              </div>`;
-          }
-          const dF = deltaToF(deltaC);
-          const cls = dF >= 0 ? "t-up" : "t-down";
-          return `
-            <div class="trend-tile">
-              <div class="t-label">${label}</div>
-              <div class="t-val ${cls}">${signed(dF.toFixed(1))}°</div>
-            </div>`;
-        };
-
-        // Build temperature UI
-        const tempHtml = `
-          <div class="grid">
-            <div class="tile current">
-              <div class="label">Current</div>
-              <div class="val">${toF(data.current.value)}°F</div>
-              <div class="time">${data.current.time}</div>
-            </div>
-            <div class="tile avg">
-              <div class="label">Average (today)</div>
-              <div class="val">${data.avg !== null ? toF(data.avg) : "—"}°F</div>
-              <div class="time">${data.count ?? 0} readings</div>
-            </div>
-          </div>
-
-          <div class="grid">
-            <div class="tile high">
-              <div class="label">High</div>
-              <div class="val">${data.high ? toF(data.high.value) : "—"}°F</div>
-              <div class="time">${data.high ? data.high.time : "—"}</div>
-            </div>
-            <div class="tile low">
-              <div class="label">Low</div>
-              <div class="val">${data.low ? toF(data.low.value) : "—"}°F</div>
-              <div class="time">${data.low ? data.low.time : "—"}</div>
-            </div>
-          </div>
-
-          <div class="section">
-            <h3>Trends</h3>
-            <div class="trend-grid">
-              ${trendTile("7-day",  data.trend7d?.delta)}
-              ${trendTile("30-day", data.trend30d?.delta)}
-            </div>
-          </div>
-
-          <div class="section m-section">
-            <h3>Soil moisture</h3>
-            <div id="moisture">Loading…</div>
-          </div>
-        `;
-
-        const contentEl = document.getElementById("content");
-        contentEl.innerHTML = tempHtml;
-
-        // Build moisture UI (only visuals; Dry/Wet scale; black/white markers)
-        function renderMoisture(depths){
-          const cont = document.getElementById("moisture");
-          if (!depths || !depths.length){
-            cont.textContent = moist.error || "No moisture data.";
-            return;
-          }
-          cont.innerHTML = depths.map(d => {
-            const v = Number.isFinite(d.vwc) ? Math.max(0, Math.min(100, d.vwc)) : null;
-            const a = Number.isFinite(d.avg30) ? Math.max(0, Math.min(100, d.avg30)) : null;
-
-            return `
-              <div class="m-tile">
-                <div class="m-row">
-                  <div class="m-label">${d.depthIn}&Prime; soil moisture</div>
-                </div>
-                <div class="m-bar">
-                  ${a!==null ? `<div class="m-marker avg" style="left:${a}%"></div>` : ""}
-                  ${v!==null ? `<div class="m-marker current" style="left:${v}%"></div>` : ""}
-                </div>
-                <div class="m-scale"><span>Dry</span><span>Wet</span></div>
-                <div class="m-legend">
-                  <span><span class="dot cur"></span>Current</span>
-                  <span><span class="dot avg"></span>30-day avg</span>
-                </div>
-              </div>
-            `;
-          }).join("");
-        }
-
-        if (moist.error) {
-          document.getElementById("moisture").textContent = moist.error;
-        } else {
-          renderMoisture(moist.depths);
-        }
-
-      } catch (e) {
-        document.getElementById("content").textContent = "Fetch error: " + e.message;
+      const vals = {};
+      for (const col of vCols) {
+        const v = parseFloat(row[col.colIdx]);
+        if (Number.isFinite(v)) vals[col.colIdx] = v;
       }
-    })();
-  </script>
-</body>
-</html>
+      if (Object.keys(vals).length) readings.push({ ts, vals });
+    }
+    if (!readings.length) return json(200, { error: "No VWC readings parsed.", header });
+
+    // Detect unit (0..1 vs 0..100); use last row's median
+    const lastRow = readings[readings.length - 1];
+    const sampleVals = Object.values(lastRow.vals);
+    const median = sampleVals.sort((a,b)=>a-b)[Math.floor(sampleVals.length/2)];
+    const factor = median > 1 ? 1 : 100;
+
+    // Build per-column series within the window
+    const cutoffMs = Date.now() - days * 24 * 3600 * 1000;
+    const seriesByCol = new Map(); // colIdx -> [{ts, v}]
+    for (const col of vCols) seriesByCol.set(col.colIdx, []);
+    for (const r of readings) {
+      if (r.ts.getTime() < cutoffMs) continue;
+      for (const col of vCols) {
+        const raw = r.vals[col.colIdx];
+        if (raw == null) continue;
+        seriesByCol.get(col.colIdx).push({ ts: r.ts, v: raw * factor });
+      }
+    }
+
+    // For each requested depth: nearest column → latest vwc and 30-day average
+    const depths = [];
+    for (const wantIn of depthsReq) {
+      let best = vCols[0];
+      for (const c of vCols) {
+        if (Math.abs(c.depthInches - wantIn) < Math.abs(best.depthInches - wantIn)) best = c;
+      }
+      const ser = seriesByCol.get(best.colIdx) || [];
+      if (!ser.length) {
+        depths.push({ depthIn: wantIn, vwc: null, avg30: null, mappedDepthIn: round1(best.depthInches) });
+        continue;
+      }
+      ser.sort((a,b)=> a.ts - b.ts);
+      const latest = ser[ser.length - 1].v;
+      const avg30 = ser.reduce((a,b)=>a+b.v, 0) / ser.length;
+      depths.push({
+        depthIn: wantIn,
+        vwc: round1(latest),
+        avg30: round1(avg30),
+        mappedDepthIn: round1(best.depthInches)
+      });
+    }
+
+    return json(200, {
+      name,
+      tz,
+      days,
+      depths
+    });
+
+  } catch (e) {
+    return json(500, { error: e?.message || String(e) });
+  }
+};
+
+// ---------- helpers ----------
+function json(status, body) {
+  return {
+    statusCode: status,
+    headers: {
+      "content-type": "application/json"
+    },
+    body: JSON.stringify(body)
+  };
+}
+function round1(x){ return Math.round(x*10)/10; }
+function ymdHMS_utc(d){
+  const y=d.getUTCFullYear(), m=String(d.getUTCMonth()+1).padStart(2,'0'), da=String(d.getUTCDate()).padStart(2,'0');
+  const H=String(d.getUTCHours()).padStart(2,'0'), M=String(d.getUTCMinutes()).padStart(2,'0'), S=String(d.getUTCSeconds()).padStart(2,'0');
+  return `${y}${m}${da}${H}${M}${S}`;
+}
+// Parse 'YYYY-MM-DD HH:MM[:SS]' as local wall-time in given tz
+function parseLocalWallTime(tsRaw, timeZone = "America/Chicago") {
+  const s = String(tsRaw).trim();
+  if (/[zZ]$/.test(s) || /[+\-]\d{2}:?\d{2}$/.test(s)) {
+    const d = new Date(s);
+    return isNaN(d) ? new Date(NaN) : d;
+  }
+  const m = s.replace(/\//g, "-").replace(" ", "T")
+    .match(/^(\d{4})-(\d{2})-(\d{2})[T ](\d{2}):(\d{2})(?::(\d{2}))?$/);
+  if (!m) return new Date(NaN);
+  const want = { Y:+m[1], M:+m[2], D:+m[3], h:+m[4], i:+m[5], s: +(m[6] || 0) };
+  const guessMs = Date.UTC(want.Y, want.M-1, want.D, want.h, want.i, want.s);
+  const fmt = new Intl.DateTimeFormat("en-US", {
+    timeZone, year:"numeric", month:"2-digit", day:"2-digit",
+    hour:"2-digit", minute:"2-digit", second:"2-digit", hour12:false
+  });
+  const parts = Object.fromEntries(fmt.formatToParts(new Date(guessMs)).map(p => [p.type, p.value]));
+  const gotMs = Date.UTC(+parts.year, +parts.month-1, +parts.day, +parts.hour, +parts.minute, +parts.second);
+  const wantMs = Date.UTC(want.Y, want.M-1, want.D, want.h, want.i, want.s);
+  return new Date(guessMs + (wantMs - gotMs));
+}
+
+// Minimal CSV parser
+function parseCSV(text){
+  const out=[], rowInit=()=>[], pushRow=(arr)=>{ out.push(arr); };
+  let row=rowInit(), cur="", inQ=false;
+  for (let i=0;i<text.length;i++){
+    const ch=text[i], nx=text[i+1];
+    if (inQ){
+      if (ch==='"' && nx==='"'){ cur+='"'; i++; }
+      else if (ch==='"'){ inQ=false; }
+      else { cur+=ch; }
+    } else {
+      if (ch==='"'){ inQ=true; }
+      else if (ch===','){ row.push(cur); cur=""; }
+      else if (ch==='\n'){ row.push(cur); pushRow(row); row=rowInit(); cur=""; }
+      else if (ch!=='\r'){ cur+=ch; }
+    }
+  }
+  if (cur.length || row.length){ row.push(cur); out.push(row); }
+  return out;
+}
