--- a/index.html
+++ b/index.html
@@ -5,121 +5,52 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>6&quot; Soil Temperature – Holdrege, NE</title>
 
-  <!-- Inter font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800;900&display=swap" rel="stylesheet">
-
   <style>
     :root{
-      --page: #f7f9fc;
-      --card: #ffffff;
-      --border: #e6ecf5;
-      --shadow: rgba(15, 23, 42, 0.06);
-      --text: #0f172a;
-      --muted: #5b6b80;
+      --page:#f7f9fc; --card:#fff; --border:#e6ecf5; --shadow:rgba(15,23,42,.06);
+      --text:#0f172a; --muted:#5b6b80;
+      --ok:#33d17a; --hi:#ff5577; --lo:#4ea3ff; --avg:#ffbf47;
 
-      /* Temps */
-      --ok: #33d17a;
-      --hi: #ff5577;
-      --lo: #4ea3ff;
-      --avg: #ffbf47;
-
-      /* Moisture gradient (vibrant) */
-      --dryA: rgba(255,191,71,0.72);
-      --okA:  rgba(51,209,122,0.72);
-      --wetA: rgba(78,163,255,0.72);
-      --track:#eef2f7;
-      --marker:#0f172a;
+      /* Moisture visuals */
+      --dryA:rgba(255,191,71,.72); --okA:rgba(51,209,122,.72); --wetA:rgba(78,163,255,.72);
+      --track:#eef2f7; --marker:#0f172a;
     }
-
-    *{ box-sizing:border-box }
-    body{
-      margin:0;
-      min-height:100vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      background:var(--page);
-      color:var(--text);
-      font-family:'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
-    }
-
-    .card{
-      width:min(92vw, 560px);
-      background:var(--card);
-      border:1px solid var(--border);
-      box-shadow:0 8px 24px var(--shadow);
-      border-radius:14px;
-      padding:24px;
-      text-align:center;
-    }
-
-    .title{ font-weight:800; font-size:26px; margin:0 0 2px }
-    .subtitle{ font-size:16px; font-weight:600; opacity:.9; margin:0 0 2px }
-    .location-note{ font-size:13px; color:var(--muted); margin:0 0 16px }
-
-    .grid{ display:grid; grid-template-columns:1fr 1fr; gap:12px; margin-bottom:14px }
-    .tile{
-      background:#fff;
-      border:1px solid var(--border);
-      border-radius:12px;
-      padding:12px 12px 10px;
-      text-align:center;
-    }
-    .label{ font-size:12px; font-weight:700; color:var(--muted); margin-bottom:4px }
-    .val{ font-size:28px; font-weight:900; margin:2px 0 0 }
-    .time{ font-size:12px; color:var(--muted); margin-top:4px }
-
-    .current .val{ color:var(--ok) }
-    .high .val{ color:var(--hi) }
-    .low .val{ color:var(--lo) }
-    .avg .val{ color:var(--avg) }
-
-    .section{ margin-top:6px }
-    .section h3{
-      margin:6px 0 10px;
-      font-size:15px;
-      font-weight:800;
-      color:var(--text);
-    }
-    .trend-grid{ display:grid; grid-template-columns:1fr 1fr; gap:12px }
-    .trend-tile{
-      background:#fff;
-      border:1px solid var(--border);
-      border-radius:12px;
-      padding:12px;
-    }
-    .t-label{ font-size:12px; font-weight:700; color:var(--muted); margin-bottom:6px }
-    .t-val{ font-size:24px; font-weight:900; line-height:1.1 }
-    .t-up{ color:var(--avg) }
-    .t-down{ color:var(--lo) }
+    *{box-sizing:border-box}
+    body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;background:var(--page);color:var(--text);font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
+    .card{width:min(92vw,560px);background:var(--card);border:1px solid var(--border);box-shadow:0 8px 24px var(--shadow);border-radius:14px;padding:24px;text-align:center}
+    .title{font-weight:800;font-size:26px;margin:0 0 2px}
+    .subtitle{font-size:16px;font-weight:600;opacity:.9;margin:0 0 2px}
+    .location-note{font-size:13px;color:var(--muted);margin:0 0 16px}
+    .grid{display:grid;grid-template-columns:1fr 1fr;gap:12px;margin-bottom:14px}
+    .tile{background:#fff;border:1px solid var(--border);border-radius:12px;padding:12px 12px 10px;text-align:center}
+    .label{font-size:12px;font-weight:700;color:var(--muted);margin-bottom:4px}
+    .val{font-size:28px;font-weight:900;margin:2px 0 0}
+    .time{font-size:12px;color:var(--muted);margin-top:4px}
+    .current .val{color:var(--ok)} .high .val{color:var(--hi)} .low .val{color:var(--lo)} .avg .val{color:var(--avg)}
+    .section{margin-top:6px}
+    .section h3{margin:6px 0 10px;font-size:15px;font-weight:800;color:var(--text)}
+    .trend-grid{display:grid;grid-template-columns:1fr 1fr;gap:12px}
+    .trend-tile{background:#fff;border:1px solid var(--border);border-radius:12px;padding:12px}
+    .t-label{font-size:12px;font-weight:700;color:var(--muted);margin-bottom:6px}
+    .t-val{font-size:24px;font-weight:900;line-height:1.1}
+    .t-up{color:var(--avg)} .t-down{color:var(--lo)}
 
     /* Moisture section */
-    .m-section h3{ margin-top:14px }
-    .m-tile{
-      border:1px solid var(--border);
-      border-radius:12px;
-      padding:14px;
-      background:#fff;
-      text-align:center;
-      margin-bottom:12px;
-    }
-    .m-row{ display:flex; align-items:center; justify-content:center; gap:12px; margin-bottom:10px }
-    .m-label{ font-size:13px; font-weight:800; color:var(--muted) }
-
-    .m-bar{
-      position:relative; height:18px; border-radius:999px;
-      background: linear-gradient(90deg, var(--dryA) 0%, var(--okA) 50%, var(--wetA) 100%), var(--track);
-      overflow:hidden;
-    }
-    .m-marker{ position:absolute; top:50%; transform:translate(-50%,-50%); border-radius:50%; }
-    .m-marker.current{ width:14px; height:14px; background:#0f172a; box-shadow:0 0 0 2px #fff, 0 2px 8px rgba(15,23,42,.2); }
-    .m-marker.avg{ width:12px; height:12px; background:#fff; box-shadow:0 0 0 2px #0f172a, 0 2px 6px rgba(15,23,42,.12); }
-
-    .m-scale{ display:flex; justify-content:center; gap:40px; font-size:12px; color:var(--muted); margin-top:8px }
-    .m-legend{ margin-top:8px; display:flex; justify-content:center; gap:16px; font-size:12px; color:var(--muted); }
-    .m-legend .dot{ display:inline-block; width:10px; height:10px; border-radius:50%; margin-right:6px; vertical-align:-1px }
-    .m-legend .cur{ background:#0f172a; box-shadow:0 0 0 2px #fff }
-    .m-legend .avg{ background:#fff; box-shadow:0 0 0 2px #0f172a }
+    .m-section h3{margin-top:14px}
+    .m-tile{border:1px solid var(--border);border-radius:12px;padding:14px;background:#fff;text-align:center;margin-bottom:12px}
+    .m-row{display:flex;align-items:center;justify-content:center;gap:12px;margin-bottom:10px}
+    .m-label{font-size:13px;font-weight:800;color:var(--muted)}
+    .m-bar{position:relative;height:18px;border-radius:999px;background:linear-gradient(90deg,var(--dryA) 0%,var(--okA) 50%,var(--wetA) 100%),var(--track);overflow:hidden}
+    .m-marker{position:absolute;top:50%;transform:translate(-50%,-50%);border-radius:50%}
+    .m-marker.current{width:14px;height:14px;background:#0f172a;box-shadow:0 0 0 2px #fff,0 2px 8px rgba(15,23,42,.2)}
+    .m-marker.avg{width:12px;height:12px;background:#fff;box-shadow:0 0 0 2px #0f172a,0 2px 6px rgba(15,23,42,.12)}
+    .m-scale{display:flex;justify-content:center;gap:40px;font-size:12px;color:var(--muted);margin-top:8px}
+    .m-legend{margin-top:8px;display:flex;justify-content:center;gap:16px;font-size:12px;color:var(--muted)}
+    .m-legend .dot{display:inline-block;width:10px;height:10px;border-radius:50%;margin-right:6px;vertical-align:-1px}
+    .m-legend .cur{background:#0f172a;box-shadow:0 0 0 2px #fff}
+    .m-legend .avg{background:#fff;box-shadow:0 0 0 2px #0f172a}
+    .err{color:#b91c1c;font-weight:700}
   </style>
 </head>
 <body>
@@ -127,7 +58,6 @@
     <h1 class="title">6&quot; Soil Temperature</h1>
     <div class="subtitle">Holdrege, NE</div>
     <div class="location-note">Dryland corn stubble</div>
-
     <div id="content">Loading…</div>
   </div>
 
@@ -137,8 +67,8 @@
       const tz = "America/Chicago";
       const bust = Date.now();
 
-      // Call Netlify functions by absolute URL (so GitHub Pages can reach them)
       const FUNC_BASE = "https://soiltemp.netlify.app";
+
       const urlTemp  = `${FUNC_BASE}/.netlify/functions/soil-temp?name=${encodeURIComponent(loggerName)}&tz=${encodeURIComponent(tz)}&days=30&_=${bust}`;
       const urlMoist = `${FUNC_BASE}/.netlify/functions/soil-moisture?name=${encodeURIComponent(loggerName)}&depths=6,22&days=30&_=${bust}`;
 
@@ -146,35 +76,30 @@
       const deltaToF = dc => Math.round((dc * 9/5) * 10) / 10;
       const signed = n => (n > 0 ? `+${n}` : `${n}`);
 
-      try{
-        const [resT, resM] = await Promise.all([fetch(urlTemp), fetch(urlMoist)]);
-        const data  = await resT.json();
-        const moist = await resM.json();
-
-        if (data.error || data.note){
-          document.getElementById("content").textContent = data.error || data.note;
-          return;
+      async function fetchJson(url){
+        const res = await fetch(url);
+        const ct = res.headers.get("content-type") || "";
+        if (!res.ok || !ct.includes("application/json")) {
+          const text = await res.text();
+          throw new Error(`HTTP ${res.status} at ${url}\\n${text.slice(0,300)}`);
         }
+        return res.json();
+      }
+
+      try{
+        const [data, moist] = await Promise.all([fetchJson(urlTemp), fetchJson(urlMoist)]);
 
         const trendTile = (label, deltaC) => {
-          if (deltaC === null || deltaC === undefined) {
-            return `
-              <div class="trend-tile">
-                <div class="t-label">${label}</div>
-                <div class="t-val">—</div>
-              </div>`;
+          if (deltaC == null) {
+            return `<div class="trend-tile"><div class="t-label">${label}</div><div class="t-val">—</div></div>`;
           }
           const dF = deltaToF(deltaC);
           const cls = dF >= 0 ? "t-up" : "t-down";
-          return `
-            <div class="trend-tile">
-              <div class="t-label">${label}</div>
-              <div class="t-val ${cls}">${signed(dF.toFixed(1))}°</div>
-            </div>`;
+          return `<div class="trend-tile"><div class="t-label">${label}</div><div class="t-val ${cls}">${signed(dF.toFixed(1))}°</div></div>`;
         };
 
-        // Temperature UI
-        const tempHtml = `
+        const contentEl = document.getElementById("content");
+        contentEl.innerHTML = `
           <div class="grid">
             <div class="tile current">
               <div class="label">Current</div>
@@ -211,20 +136,16 @@
 
           <div class="section m-section">
             <h3>Soil moisture</h3>
-            <div id="moisture">Loading…</div>
+            <div id="moisture"></div>
           </div>
         `;
-        const contentEl = document.getElementById("content");
-        contentEl.innerHTML = tempHtml;
 
-        // Moisture UI (visual only)
-        function renderMoisture(depths){
-          const cont = document.getElementById("moisture");
-          if (!depths || !depths.length){
-            cont.textContent = moist.error || "No moisture data.";
-            return;
-          }
-          cont.innerHTML = depths.map(d => {
+        // Moisture visuals
+        const cont = document.getElementById("moisture");
+        if (moist.error || !moist.depths?.length) {
+          cont.innerHTML = `<div class="err">${moist.error || "No moisture data."}</div>`;
+        } else {
+          cont.innerHTML = moist.depths.map(d => {
             const v = Number.isFinite(d.vwc) ? Math.max(0, Math.min(100, d.vwc)) : null;
             const a = Number.isFinite(d.avg30) ? Math.max(0, Math.min(100, d.avg30)) : null;
             return `
@@ -242,11 +163,6 @@
               </div>
             `;
           }).join("");
-        }
-        if (moist.error) {
-          document.getElementById("moisture").textContent = moist.error;
-        } else {
-          renderMoisture(moist.depths);
         }
 
       } catch (e) {
