--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>6&quot; Soil Temperature – Holdrege, NE</title>
 
+  <!-- Inter font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800;900&display=swap" rel="stylesheet">
+
   <style>
     :root{
       --page:#f7f9fc; --card:#fff; --border:#e6ecf5; --shadow:rgba(15,23,42,.06);
@@ -13,7 +15,7 @@
       --ok:#33d17a; --hi:#ff5577; --lo:#4ea3ff; --avg:#ffbf47;
 
       /* Moisture visuals */
-      --dryA:rgba(255,191,71,.72); --okA:rgba(51,209,122,.72); --wetA:rgba(78,163,255,.72);
+      --dryA:rgba(255,191,71,.85); --okA:rgba(51,209,122,.85); --wetA:rgba(78,163,255,.85);
       --track:#eef2f7; --marker:#0f172a;
     }
     *{box-sizing:border-box}
@@ -22,12 +24,14 @@
     .title{font-weight:800;font-size:26px;margin:0 0 2px}
     .subtitle{font-size:16px;font-weight:600;opacity:.9;margin:0 0 2px}
     .location-note{font-size:13px;color:var(--muted);margin:0 0 16px}
+
     .grid{display:grid;grid-template-columns:1fr 1fr;gap:12px;margin-bottom:14px}
     .tile{background:#fff;border:1px solid var(--border);border-radius:12px;padding:12px 12px 10px;text-align:center}
     .label{font-size:12px;font-weight:700;color:var(--muted);margin-bottom:4px}
     .val{font-size:28px;font-weight:900;margin:2px 0 0}
     .time{font-size:12px;color:var(--muted);margin-top:4px}
     .current .val{color:var(--ok)} .high .val{color:var(--hi)} .low .val{color:var(--lo)} .avg .val{color:var(--avg)}
+
     .section{margin-top:6px}
     .section h3{margin:6px 0 10px;font-size:15px;font-weight:800;color:var(--text)}
     .trend-grid{display:grid;grid-template-columns:1fr 1fr;gap:12px}
@@ -41,15 +45,29 @@
     .m-tile{border:1px solid var(--border);border-radius:12px;padding:14px;background:#fff;text-align:center;margin-bottom:12px}
     .m-row{display:flex;align-items:center;justify-content:center;gap:12px;margin-bottom:10px}
     .m-label{font-size:13px;font-weight:800;color:var(--muted)}
-    .m-bar{position:relative;height:18px;border-radius:999px;background:linear-gradient(90deg,var(--dryA) 0%,var(--okA) 50%,var(--wetA) 100%),var(--track);overflow:hidden}
-    .m-marker{position:absolute;top:50%;transform:translate(-50%,-50%);border-radius:50%}
-    .m-marker.current{width:14px;height:14px;background:#0f172a;box-shadow:0 0 0 2px #fff,0 2px 8px rgba(15,23,42,.2)}
-    .m-marker.avg{width:12px;height:12px;background:#fff;box-shadow:0 0 0 2px #0f172a,0 2px 6px rgba(15,23,42,.12)}
-    .m-scale{display:flex;justify-content:center;gap:40px;font-size:12px;color:var(--muted);margin-top:8px}
+    .m-bar{position:relative;height:18px;border-radius:999px;background:
+      linear-gradient(90deg,var(--dryA) 0%,var(--okA) 50%,var(--wetA) 100%),var(--track);
+      overflow:hidden}
+    .m-marker{position:absolute;top:50%;border-radius:50%}
+    .m-marker.current{
+      width:14px;height:14px;background:#0f172a;
+      transform:translate(-50%,-30%); /* slightly below center */
+      box-shadow:0 0 0 2px #fff,0 2px 8px rgba(15,23,42,.2); z-index:2;
+    }
+    /* Average = diamond (rotated square) so it’s distinct from the circle */
+    .m-marker.avg{
+      width:12px;height:12px;background:#fff;border:2px solid #0f172a;
+      transform:translate(-50%,-70%) rotate(45deg); /* above center + diamond */
+      box-shadow:0 2px 6px rgba(15,23,42,.12); z-index:1;
+    }
+    .m-scale{
+      display:flex;justify-content:space-between;gap:0;width:100%;
+      font-size:12px;color:var(--muted);margin-top:8px
+    }
     .m-legend{margin-top:8px;display:flex;justify-content:center;gap:16px;font-size:12px;color:var(--muted)}
     .m-legend .dot{display:inline-block;width:10px;height:10px;border-radius:50%;margin-right:6px;vertical-align:-1px}
     .m-legend .cur{background:#0f172a;box-shadow:0 0 0 2px #fff}
-    .m-legend .avg{background:#fff;box-shadow:0 0 0 2px #0f172a}
+    .m-legend .avg{width:10px;height:10px;border:2px solid #0f172a;background:#fff;transform:rotate(45deg);display:inline-block;border-radius:2px}
     .err{color:#b91c1c;font-weight:700}
   </style>
 </head>
@@ -58,6 +76,7 @@
     <h1 class="title">6&quot; Soil Temperature</h1>
     <div class="subtitle">Holdrege, NE</div>
     <div class="location-note">Dryland corn stubble</div>
+
     <div id="content">Loading…</div>
   </div>
 
@@ -67,6 +86,7 @@
       const tz = "America/Chicago";
       const bust = Date.now();
 
+      // Your Netlify site base (functions live here)
       const FUNC_BASE = "https://soiltemp.netlify.app";
 
       const urlTemp  = `${FUNC_BASE}/.netlify/functions/soil-temp?name=${encodeURIComponent(loggerName)}&tz=${encodeURIComponent(tz)}&days=30&_=${bust}`;
@@ -76,12 +96,27 @@
       const deltaToF = dc => Math.round((dc * 9/5) * 10) / 10;
       const signed = n => (n > 0 ? `+${n}` : `${n}`);
 
+      // --- Moisture thresholds: map each depth to its useful range
+      const MOIST_THRESH = {
+        6:  { low: 20, high: 47 },  // 6" sensor
+        22: { low: 48, high: 55 },  // 22" sensor
+      };
+      function posInWindow(value, depthIn) {
+        const t = MOIST_THRESH[depthIn];
+        if (!t) return Math.max(0, Math.min(100, value)); // fallback raw 0..100
+        const { low, high } = t;
+        const denom = Math.max(1e-6, high - low);
+        let x = (value - low) / denom;
+        x = Math.max(0, Math.min(1, x));
+        return x * 100; // %
+      }
+
       async function fetchJson(url){
         const res = await fetch(url);
         const ct = res.headers.get("content-type") || "";
         if (!res.ok || !ct.includes("application/json")) {
           const text = await res.text();
-          throw new Error(`HTTP ${res.status} at ${url}\\n${text.slice(0,300)}`);
+          throw new Error(`HTTP ${res.status} at ${url}\n${text.slice(0,300)}`);
         }
         return res.json();
       }
@@ -146,19 +181,23 @@
           cont.innerHTML = `<div class="err">${moist.error || "No moisture data."}</div>`;
         } else {
           cont.innerHTML = moist.depths.map(d => {
-            const v = Number.isFinite(d.vwc) ? Math.max(0, Math.min(100, d.vwc)) : null;
-            const a = Number.isFinite(d.avg30) ? Math.max(0, Math.min(100, d.avg30)) : null;
+            const v = Number.isFinite(d.vwc)   ? d.vwc   : null;
+            const a = Number.isFinite(d.avg30) ? d.avg30 : null;
+
+            const posCur = v !== null ? posInWindow(v, d.depthIn) : null;
+            const posAvg = a !== null ? posInWindow(a, d.depthIn) : null;
+
             return `
               <div class="m-tile">
                 <div class="m-row"><div class="m-label">${d.depthIn}&Prime; soil moisture</div></div>
                 <div class="m-bar">
-                  ${a!==null ? `<div class="m-marker avg" style="left:${a}%"></div>` : ""}
-                  ${v!==null ? `<div class="m-marker current" style="left:${v}%"></div>` : ""}
+                  ${posAvg!==null ? `<div class="m-marker avg"     style="left:${posAvg}%;"></div>` : ""}
+                  ${posCur!==null ? `<div class="m-marker current" style="left:${posCur}%;"></div>` : ""}
                 </div>
                 <div class="m-scale"><span>Dry</span><span>Wet</span></div>
                 <div class="m-legend">
                   <span><span class="dot cur"></span>Current</span>
-                  <span><span class="dot avg"></span>30-day avg</span>
+                  <span><span class="avg"></span>30-day avg</span>
                 </div>
               </div>
             `;
